[package]
name = "phoenix"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.31"
rand = "0.9.1"
redis = { version = "0.29.5", features = ["connection-manager", "tcp_nodelay", "tokio-comp"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.16.0", features = ["v4"] }
